Issue #SB-28778 fix:Board  / Learning Outcome field is not aligned Properly while project creation

--- a/src/app/client/src/app/modules/core/components/content-data-form/content-data-form.component.scss
+++ b/src/app/client/src/app/modules/core/components/content-data-form/content-data-form.component.scss
@@ -60,8 +60,6 @@
       }
   }
   .treepicker-parent{
-    margin-bottom: 16px;
-    margin-top: 0;
     .list-border{
       font-size: 0.75rem !important;
       padding: 0.25rem 0.5rem !important;
@@ -69,8 +67,11 @@
       border-radius: 0.1875rem !important;
     }
   }
-  .sb-dropdown{
-    margin-bottom: 16px !important;
+  .sb-dropdown,
+  .treepicker-parent,
+  .multi-select-section-app
+  {
+    margin: 1rem 0;
   }
 }
 sui-select{
